# JIPP-2020-2021

./: README.md
LAB1/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
lab2/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp
lab3/: macierz.hpp  main.cpp  task.txt
lab3_Exceptions/: CMakeLists.txt
lab3_Exceptions/include/: libs.hpp  macierz.hpp
lab3_Exceptions/src/: main.cpp
lab3_sqlite/: CMakeLists.txt
lab3_sqlite/include/: libs.hpp  macierz.hpp
lab3_sqlite/libs/sqlite3/: sqlite3.lib
lab3_sqlite/src/: main.cpp
lab4/: CMakeLists.txt
lab4/include/: macierz.hpp
lab4/src/: main.cpp
lab5/: CMakeLists.txt
lab5/include/: header.hpp
lab5/src/: main.cpp
lab6/: CMakeLists.txt
lab6/include/: hr.hpp
lab6/src/: lab6.cpp
lab8/: k.sh
lab8/kelner/: header.h  kelner.cpp
lab8/zaglodzenie/: header.h  zaglodz.cpp
lab8/zakleszcz/: header.h  zakleszcz.cpp
snake/: CMakeLists.txt  snake_jeden_plik.txt
snake/include/: funk.h  header.h
snake/src/: main.cpp  snake_build.cpp  snake_draw.cpp  snake_funk.cpp  snake_move.cpp  snake_score.cpp
